# hermes2d

doc/src/: tutorial-1.rst
python/benchmarks/: bessel.py  kellogg.py  layer.py  layer2.py  line-singularity.py  lshape.py  screen.py  smooth_aniso-x.py  smooth_aniso-y.py  smooth_iso.py
python/examples/: 03.py  04.py  05.py  06.py  07.py  10.py  11.py  bessel.py  bracket.py  kellogg.py  line-singularity.py  lshape.py  screen.py  singular_perturbation.py  smooth_aniso-y.py  smooth_iso.py
python/hermes2d/: __init__.py  _hermes2d.cpp  _hermes2d.pxd  _hermes2d.pyx  forms.pyx  plot.py
python/hermes2d/examples/: CMakeLists.txt  __init__.py  c05.pyx  c06.pyx  c07.pyx  c08.pyx  c09.pyx  c10.pyx  c11.pyx  c12.pyx  c22.pyx  cbessel.pyx  cbracket.pyx  ckellogg.pyx  clayer.pyx  clayer2.pyx  cline_singularity.pyx  clshape.pyx  cscreen.pyx  csingular_perturbation.pyx  csmooth_aniso_x.pyx  csmooth_aniso_y.pyx  csmooth_anixo-x.pyx  csmooth_anixo-y.pyx  csmooth_iso.pyx  smooth_iso.pyx  square_quad.mesh
python/hermes2d/tests/: test_examples.py
python/tutorial/: 32.py
src/: linsystem.cpp  linsystem.h
